# Alder-Grove

./: .env.example  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  PRFAQ.md  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.docs/: README.md
.gemini/: styleguide.md
.github/: copilot-instructions.md  pull_request_template.md
.husky/: pre-commit
crates/grove-api/: Cargo.toml
crates/grove-api/migrations/: 001_initial_schema.sql  002_acp_schema.sql  003_collaborative_documents.sql  004_row_level_security.sql
crates/grove-api/src/: config.rs  error.rs  extract.rs  lib.rs  main.rs  state.rs
crates/grove-api/src/db/: agent_repo.rs  event_repo.rs  gate_definition_repo.rs  guardrail_repo.rs  mod.rs  pool.rs  session_repo.rs  tenant.rs  workspace_repo.rs
crates/grove-api/src/routes/: agent.rs  event.rs  gate_definition.rs  guardrail.rs  health.rs  helpers.rs  mod.rs  session.rs  workspace.rs
crates/grove-api/tests/: agent_crud.rs  agent_routes.rs  event_crud.rs  gate_definition_crud.rs  guardrail_crud.rs  guardrail_routes.rs  health.rs  session_crud.rs  tenant_isolation.rs  workspace_crud.rs
crates/grove-api/tests/common/: mod.rs
crates/grove-domain/: Cargo.toml
crates/grove-domain/src/: acp.rs  agent.rs  collaborative_document.rs  common.rs  error.rs  event.rs  gate.rs  guardrail.rs  journey.rs  lib.rs  note.rs  persona.rs  ports.rs  repository.rs  session.rs  snapshot.rs  specification.rs  step.rs  step_specification.rs  task.rs  workspace.rs
crates/grove-tauri/: Cargo.toml  tauri.conf.json
crates/grove-tauri/capabilities/: default.json
crates/grove-tauri/src/: auth.rs  main.rs
docs/: README.md  architecture-flows.md  architecture-reference.md  authentication-authorization.md  postgresql-18-guide.md
scripts/: e2e.sh  generate-ai-configs.ts  (+2 more)
src/: App.tsx  (+4 more)
(+137 files in other folders)
