[package]
name = "grove-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
grove-domain = { path = "../grove-domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
open = "5"
tracing = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
